# ruuvi-logger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-0b321e2b35033c4a8e637b25e9e7547d6f785818e8b0450a56bda8c4714e2c2c.json  query-64fd030744ac41e57503959be560359e7334dbed1fdd06d84566304fc8129dfc.json  query-dd15bba7b29160bbdb951ac1a0d3e704b10ac854e236c05f3cd51fc8e69e7636.json
arm64-cross/: Dockerfile  build.sh
deb/: build.sh  changelog  conffiles  control  copyright  postinst  ruuvi-logger.7  ruuvi-logger.conf  ruuvi-logger.service  ruuvi-logger.timer
migrations/: 20231227144017_record.sql
src/: config.rs  db.rs  err.rs  main.rs  record.rs
