[package]
name = "ruuvi-logger"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
macaddr = { version = "1.0" }
ruuvi = { version = "0.6", git = "https://github.com/paasim/ruuvi.git", tag = "v0.6.0" }
sqlx = { version = "0.8", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.48", features = ["macros", "rt"] }

# apparently faster compilation for sqlx-macros
[profile.dev.package.sqlx-macros]
opt-level = 3
